fix favicon stretchin issue

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -293,6 +293,8 @@ img {
 .about {
     max-width: 1100px;
     margin: 0 auto;
+    display: flex;
+    justify-content: center;
 }
 .about__img {
     border-radius: 0.5rem;
